--- a/views/details.html
+++ b/views/details.html
@@ -3,7 +3,7 @@
         <div class="jumb jumbotron">
             <div class="table-responsive">
                 <table class="table table-bordered">
-                	<h2 style="text-align: center;"><b><u>{{details.store.name}}</u></b></h2>
+                	<h3 style="text-align: center; color: brown !important;"><b><u>{{details.store.name}}</u></b></h3><br/>
                     <tbody>
                         <tr>
                             <td ng-if="details.store.authors[0]">Author</td>
@@ -45,7 +45,7 @@
 
     <div class="row" ng-if="details.store.gender">
         <div class="jumb jumbotron">
-            <div ng-if="details.store.aliases[0]"><h2 style="text-align: center;"><b><u>{{details.store.aliases[0]}}</u></b></h2> </div><br/>
+            <div ng-if="details.store.aliases[0]"><h3 style="text-align: center; color: brown;"><b><u>{{details.store.aliases[0]}}</u></b></h3> </div><br/>
             <div ng-if="details.store.gender">Gender :- {{details.store.gender}} </div>
             <div ng-if="details.store.culture">Culture :- {{details.store.culture}} </div>
             <div ng-if="details.store.name">Name :- {{details.store.name}} </div>
@@ -59,7 +59,7 @@
 
     <div class="row" ng-if="details.store.region">
         <div class="jumb jumbotron">
-            <div ng-if="details.store.name"><h2 style="text-align: center;"><b><u>{{details.store.name}}</u></b></h2> </div><br/>
+            <div ng-if="details.store.name"><h3 style="text-align: center; color: brown;"><b><u>{{details.store.name}}</u></b></h3> </div><br/>
             <div ng-if="details.store.region">Region :- {{details.store.region}} </div>
             <div ng-if="details.store.coatOfArms">Coat Of Arms :- {{details.store.coatOfArms}} </div>
             <div ng-if="details.store.words">Words :- {{details.store.words}} </div>
