--- a/views/home.html
+++ b/views/home.html
@@ -1,35 +1,66 @@
 <div class="container">
-    <div ng-repeat="data in mainCtrl.entireData | orderBy : sort">
-        <div  ng-if="$index == 0"><h2> <u>BOOKS</u> </h2>
-            <div class="form-group">
-                <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortBooks()">
-                    <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
-                </select>
+        <div style="text-align: center;">
+            <form>
+                <input class="inp" style="text-align: center;" type="text" placeholder="Search Books/Houses/Characters" ng-model='sort'></input>
+            </form>
+        <br/>
+    </div>
+    <div ng-repeat="data in mainCtrl.entireData | filter : sort">
+        <div ng-if="$index == 0">
+            <h2> <u>BOOKS</u> </h2>
+            <br/>
+            <div>
+                <div>
+                    <form>
+                        <input class="inp1" type="text" placeholder="Search Books" ng-model='sort.data.name'></input>
+                    </form>
+                </div>
+                <div class="form-group">
+                    <label> Sort By Order</label>
+                    <select ng-model="sort" onchange="sortBooks()">
+                        <option value='' ng-selected="true"> Select </option>
+                        <option value='data.name'> ascending</option>
+                        <option value='-data.name'> descending</option>
+                    </select>
+                </div>
             </div>
         </div>
-
-        <div  ng-if="$index == 10"><h2> <u>HOUSES</u> </h2>
-            <div class="form-group">
-                <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortHouses()">
-                    <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
-                </select>
+        <div ng-if="$index == 10">
+            <h2> <u>HOUSES</u> </h2>
+            <br/>
+            <div>
+                <div>
+                    <form>
+                        <input class="inp1" type="text" placeholder="Search Houses" ng-model='sort.data.name'></input>
+                    </form>
+                </div>
+                <div class="form-group">
+                    <label> Sort By Order</label>
+                    <select ng-model="sort" onchange="sortHouses()">
+                        <option value='' ng-selected="true"> Select </option>
+                        <option value='data.name'> ascending</option>
+                        <option value='-data.name'> descending</option>
+                    </select>
+                </div>
             </div>
         </div>
-
-        <div  ng-if="$index == 20"><h2> <u>CHARACTERS</u> </h2>
-            <div class="form-group">
-                <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortChars()">
-                    <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
-                </select>
+        <div ng-if="$index == 20">
+            <h2> <u>CHARACTERS</u> </h2>
+            <br/>
+            <div>
+                <div>
+                    <form>
+                        <input class="inp1" type="text" placeholder="Search Characters" ng-model='sort.data.name'></input>
+                    </form>
+                </div>
+                <div class="form-group">
+                    <label> Sort By Order</label>
+                    <select ng-model="sort" onchange="sortChars()">
+                        <option value='' ng-selected="true"> Select </option>
+                        <option value='data.name'> ascending</option>
+                        <option value='-data.name'> descending</option>
+                    </select>
+                </div>
             </div>
         </div>
         <custom-row></custom-row>
