--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container" id="tableContainer">
     <div ng-repeat="data in mainCtrl.entireData | orderBy : sort">
         <div  ng-if="$index == 0"><h3> <u>BOOKS</u> </h3>
             <div class="form-group" style="float: right; margin-right: 5%;">
                 <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortBooks()">
+                <select ng-model="sort" id="sortBooks" onchange="sortFun(event)">
                     <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
+                    <option value='ascending' > ascending</option>
+                    <option value='descending' > descending</option>
                 </select>
             </div>
         </div>
@@ -14,10 +14,10 @@
         <div  ng-if="$index == 10"><h3> <u>HOUSES</u> </h3>
             <div class="form-group" style="float: right; margin-right: 5%;">
                 <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortHouses()">
+                <select ng-model="sort" id="sortHouses" onchange="sortFun(event)">
                     <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
+                    <option value='ascending' > ascending</option>
+                    <option value='descending' > descending</option>
                 </select>
             </div>
         </div>
@@ -25,10 +25,10 @@
         <div  ng-if="$index == 20"><h3> <u>CHARACTERS</u> </h3>
             <div class="form-group" style="float: right; margin-right: 5%;">
                 <label> Sort By Order</label>
-                <select ng-model="sort" onchange="sortChars()">
+                <select ng-model="sort" id="sortChars" onchange="sortFun(event)">
                     <option value='' ng-selected="true"> Select </option>
-                    <option value='data.name' > ascending</option>
-                    <option value='-data.name' > descending</option>
+                    <option value='ascending' > ascending</option>
+                    <option value='descending' > descending</option>
                 </select>
             </div>
         </div>
